ability to edit pet tags on posts.
